--- a/conda-recipes/meta.yaml
+++ b/conda-recipes/meta.yaml
@@ -7,7 +7,9 @@ package:
   version: "0.1"
 
 source:
-  path: .
+  git_url: https://github.com/matsengrp/larch.git
+  git_rev: conda-packaging
+  git_submodules: true
 
 build:
   number: 0
